fixed container overlap

--- a/app/assets/stylesheets/dashboard.scss
+++ b/app/assets/stylesheets/dashboard.scss
@@ -89,7 +89,7 @@ body {
   }
   
   .form-control-dark {
-    color: rgb(2, 2, 2);
+    color: rgb(31, 30, 30);
     background-color: rgba(255, 255, 255, .1);
     border-color: rgba(255, 255, 255, .1);
   }
